--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,12 @@
                 <artifactId>jetty-maven-plugin</artifactId>
                 <version>${version.plugin.jetty}</version>
                 <configuration>
+                    <reload>automatic</reload>
+                    <scanIntervalSeconds>10</scanIntervalSeconds>
+                    <httpConnector>
+                        <!--host>localhost</host-->
+                        <port>8888</port>
+                    </httpConnector>
                     <!-- On some configs this causes shutdown of context on -->
                     <!-- a page load so disabled. -->
                     <!-- <reload>automatic</reload> -->
@@ -62,11 +68,11 @@
             <scope>provided</scope>
         </dependency>
         <!-- See comment at jetty plugin -->
-        <!-- <dependency> -->
-        <!--   <groupId>org.eclipse.jetty</groupId> -->
-        <!--   <artifactId>jetty-io</artifactId> -->
-        <!--   <version>${jetty.version}</version> -->
-        <!-- </dependency> -->
+<!--         <dependency> -->
+<!--           <groupId>org.eclipse.jetty</groupId> -->
+<!--           <artifactId>jetty-io</artifactId> -->
+<!--           <version>${jetty.version}</version> -->
+<!--         </dependency> -->
         <dependency>
             <groupId>org.thymeleaf</groupId>
             <artifactId>thymeleaf</artifactId>
