Paypal integration// PaymentServices.java - sandbox credentials// ReviewPayment, AuthorizePayment and ExecutePayment now functional

--- a/pom.xml
+++ b/pom.xml
@@ -45,11 +45,17 @@
                 <artifactId>jetty-maven-plugin</artifactId>
                 <version>${version.plugin.jetty}</version>
                 <configuration>
+                        <reload>automatic</reload>
+                        <scanIntervalSeconds>10</scanIntervalSeconds>
+                    <httpConnector>
+                        <!--host>localhost</host-->
+                        <port>8888</port>
+                    </httpConnector>
+                </configuration>
                     <!-- On some configs this causes shutdown of context on -->
                     <!-- a page load so disabled. -->
                     <!-- <reload>automatic</reload> -->
                     <!-- <scanIntervalSeconds>1</scanIntervalSeconds> -->
-                </configuration>
             </plugin>
         </plugins>
     </build>
@@ -72,5 +78,10 @@
             <artifactId>thymeleaf</artifactId>
             <version>${version.thymeleaf}</version>
         </dependency>
+            <dependency>
+                <groupId>com.paypal.sdk</groupId>
+                <artifactId>rest-api-sdk</artifactId>
+                <version>1.14.0</version>
+            </dependency>
     </dependencies>
 </project>
