--- a/pom.xml
+++ b/pom.xml
@@ -81,6 +81,10 @@
                 <artifactId>rest-api-sdk</artifactId>
                 <version>1.14.0</version>
             </dependency>
-
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>42.2.27</version>
+        </dependency>
     </dependencies>
 </project>
